# ScrapingConXPath

./: .gitignore  LICENSE  README.md  pyproject.toml
notebook/: Web Scraping xpath - Books to Scrape.ipynb  Web Scraping xpath - Immobiliare.it.ipynb
src/: immobili.py  immobili_1.py  immobili_2.py  immobili_3.py  immobili_davide.py
