[tool.poetry]
name = "scrapingconxpath"
version = "0.1.0"
description = "Tutorial Scraping con XPath"
authors = ["Burlesco70 <mario.nardi.70@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
bs4 = "^0.0.1"
lxml = "^4.7.1"
pandas = "^1.3.5"
openpyxl = "^3.0.10"
typer = "^0.7.0"
requests = "^2.28.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
